Update homepage for 5.0.0

--- a/history.html
+++ b/history.html
@@ -68,6 +68,22 @@
                 
     <h3>Releases history</h3>
 
+        <h3>Release Highlights for LiClipse 5.0.0</h3>
+        <ul>
+        	<li>Updated Base Eclipse platform to 4.8 (Photon).</li>
+        	<ul>
+        	    <li>See <a href="https://www.eclipse.org/eclipse/news/4.8/platform.php">https://www.eclipse.org/eclipse/news/4.8/platform.php</a> for more details.</li>
+        	</ul>
+        	<li>Updated PyDev to 6.4.2.</li>
+        	<ul>
+        	    <li>Fix dealing with f-strings.</li>
+        	    <li>Multiple fixes in debugger.</li>
+        	    <li>Fix in code formatter dealing with blank lines.</li>
+        	    <li>Fix sending editor line to interactive console (<strong>F2</strong>).</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.5.3</h3>
         <ul>
         	<li>Updated PyDev to 6.3.3.</li>
