--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,22 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.0.0</h3>
+        <ul>
+        	<li>Updated Base Eclipse platform to 4.8 (Photon).</li>
+        	<ul>
+        	    <li>See <a href="https://www.eclipse.org/eclipse/news/4.8/platform.php">https://www.eclipse.org/eclipse/news/4.8/platform.php</a> for more details.</li>
+        	</ul>
+        	<li>Updated PyDev to 6.4.2.</li>
+        	<ul>
+        	    <li>Fix dealing with f-strings.</li>
+        	    <li>Multiple fixes in debugger.</li>
+        	    <li>Fix in code formatter dealing with blank lines.</li>
+        	    <li>Fix sending editor line to interactive console (<strong>F2</strong>).</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.5.3</h3>
         <ul>
         	<li>Updated PyDev to 6.3.3.</li>
@@ -41,27 +57,6 @@
         	    <li>Fix in debugger conditional breakpoints.</li>
         	    <li>Fix in racing condition on jython scripting.</li>
         	    <li>Fix in code formatter with matrix multiplication operator.</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.5.2</h3>
-        <ul>
-        	<li>Updated PyDev to 6.3.1.</li>
-        	<ul>
-        	    <li>Improvements in type inference.</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Updated Egit to 4.11</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.5.1</h3>
-        <ul>
-        	<li>Updated PyDev to 6.3.1.</li>
-        	<ul>
-        	    <li>Folders no longer require <strong>__init__</strong> to be considered a package.</li>
-        	    <li>Properly recognize <strong>cx_Oracle.cp36-win_amd64.pyd</strong> as <strong>cx_Oracle</strong> (<strong>#PyDev-885</strong>).</li>
-        	    <li>Handle empty numpy arrays in debugger.</li>
         	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
         </ul>
