--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.0.1</h3>
+        <ul>
+        	<li>Updated PyDev to 6.4.3.</li>
+        	<ul>
+        	    <li>Critical fix in debugger which could deadlock when starting a thread.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.0.0</h3>
         <ul>
         	<li>Updated Base Eclipse platform to 4.8 (Photon).</li>
