--- a/scripts/history.html
+++ b/scripts/history.html
@@ -14,6 +14,23 @@
     <body>
     <h3>Releases history</h3>
 
+        <h3>Release Highlights for LiClipse 5.0.2</h3>
+        <ul>
+        	<li>Updated PyDev to 6.4.4.</li>
+        	<ul>
+        	    <li>Fixes in debugger.</li>
+        	    <li>Fixes parsing f-strings.</li>
+        	</ul>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 5.0.1</h3>
+        <ul>
+        	<li>Updated PyDev to 6.4.3.</li>
+        	<ul>
+        	    <li>Critical fix in debugger which could deadlock when starting a thread.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.0.0</h3>
         <ul>
         	<li>Updated Base Eclipse platform to 4.8 (Photon).</li>
