--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,15 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.0.2</h3>
+        <ul>
+        	<li>Updated PyDev to 6.4.4.</li>
+        	<ul>
+        	    <li>Fixes in debugger.</li>
+        	    <li>Fixes parsing f-strings.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.0.1</h3>
         <ul>
         	<li>Updated PyDev to 6.4.3.</li>
@@ -54,17 +63,6 @@
         	    <li>Multiple fixes in debugger.</li>
         	    <li>Fix in code formatter dealing with blank lines.</li>
         	    <li>Fix sending editor line to interactive console (<strong>F2</strong>).</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.5.3</h3>
-        <ul>
-        	<li>Updated PyDev to 6.3.3.</li>
-        	<ul>
-        	    <li>Fix in debugger conditional breakpoints.</li>
-        	    <li>Fix in racing condition on jython scripting.</li>
-        	    <li>Fix in code formatter with matrix multiplication operator.</li>
         	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
         </ul>
