--- a/scripts/buy.html
+++ b/scripts/buy.html
@@ -10,7 +10,7 @@
     	See the <a href="license.html">License terms</a> for details.
     	<br/>
     	<br/>
-    	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
+    	Licenses may be purchased using <!-- SWREG: shut down (need to find another option) or -->  Paypal and will be delivered to e-mail
     	specified during the checkout process.<br>
     	<br>
     	To renew an existing license, please access:<br/><a href="https://www.brainwy.com/renew_liclipse_licence/">https://www.brainwy.com/renew_liclipse_licence/</a>
@@ -21,12 +21,14 @@
     	<br>
 		<h3>Buy Single User</h3>
 
-		<ul class="libutton">
+		<!--
+		<ul class="libutton">: shut down (need to find another option)
         <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-1&v=0&d=0&q=1">
         Click to buy using<strong class="libutton">SWREG</strong>
         </a>
         </li>
     	</ul>
+    	-->
 
 		<ul class="libutton">
         <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NJW4VEJQZ36GJ">
@@ -37,12 +39,14 @@
 		<br/>
 		<h3>Buy Multi User</h3>
 
-		<ul class="libutton">
+		<!--
+		<ul class="libutton">: shut down (need to find another option)
         <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-2&v=0&d=0&q=1">
         Click to buy using<strong class="libutton">SWREG</strong>
         </a>
         </li>
     	</ul>
+    	-->
 
 		<ul class="libutton">
         <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=G5APKLQNXK7DL">
