--- a/history.html
+++ b/history.html
@@ -67,6 +67,17 @@
             <section>
                 
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 5.0.3</h3>
+        <ul>
+        	<li>Updated PyDev to 6.5.0.</li>
+        	<ul>
+        	    <li>Debugger improvements.</li>
+        	    <li>#region/#endregion code folding.</li>
+        	    <li>Ctrl+Alt+Shift+I to change default interpreter.</li>
+        	    <li>Scroll lock for interactive interpreter.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
 
         <h3>Release Highlights for LiClipse 5.0.2</h3>
         <ul>
