Updated to LiClipse 5.1.0

--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,19 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 5.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.0.0.</li>
+        	<ul>
+        	    <li>Debugger performance improvements (on Python 3.6 onwards).</li>
+        	    <li>Mypy can be used for doing code analysis.</li>
+        	    <li>Black can be used as the code formatting engine.</li>
+        	    <li>It's now possible to use pipenv for managing virtual environments.</li>
+        	    <li>It's possible to manage virtual environments from the editor (Ctrl+2, pip/conda/pipenv).</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.0.3</h3>
         <ul>
         	<li>Updated PyDev to 6.5.0.</li>
