--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,19 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.0.0.</li>
+        	<ul>
+        	    <li>Debugger performance improvements (on Python 3.6 onwards).</li>
+        	    <li>Mypy can be used for doing code analysis.</li>
+        	    <li>Black can be used as the code formatting engine.</li>
+        	    <li>It's now possible to use pipenv for managing virtual environments.</li>
+        	    <li>It's possible to manage virtual environments from the editor (Ctrl+2, pip/conda/pipenv).</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.0.3</h3>
         <ul>
         	<li>Updated PyDev to 6.5.0.</li>
@@ -52,30 +65,6 @@
         	<ul>
         	    <li>Fixes in debugger.</li>
         	    <li>Fixes parsing f-strings.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.0.1</h3>
-        <ul>
-        	<li>Updated PyDev to 6.4.3.</li>
-        	<ul>
-        	    <li>Critical fix in debugger which could deadlock when starting a thread.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.0.0</h3>
-        <ul>
-        	<li>Updated Base Eclipse platform to 4.8 (Photon).</li>
-        	<ul>
-        	    <li>See <a href="https://www.eclipse.org/eclipse/news/4.8/platform.php">https://www.eclipse.org/eclipse/news/4.8/platform.php</a> for more details.</li>
-        	</ul>
-        	<li>Updated PyDev to 6.4.2.</li>
-        	<ul>
-        	    <li>Fix dealing with f-strings.</li>
-        	    <li>Multiple fixes in debugger.</li>
-        	    <li>Fix in code formatter dealing with blank lines.</li>
-        	    <li>Fix sending editor line to interactive console (<strong>F2</strong>).</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
         </ul>
 
