Added HTML lang="en"
Primarily an accessibility concern for screen reader software, 'en'
makes sense for these static "*.html" files as they all contain english
content.

--- a/scripts/contact.html
+++ b/scripts/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head></head>
     <body>
     For bug reports or feature requests, please create an entry at the <a href="https://www.brainwy.com/tracker/LiClipse/">LiClipse Tracker</a>.
