--- a/scripts/multi_edition_video.html
+++ b/scripts/multi_edition_video.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0014)about:internet -->
-<html>
+<html lang="en">
     <head>
         <style type="text/css">
             body {
