--- a/video/multi_edition_video.html
+++ b/video/multi_edition_video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <body>
 		Page moved to <a href="../multi_edition_video.html">Multi-Edition Video</a>
     </body>
