--- a/scripts/text/_template_manual.html
+++ b/scripts/text/_template_manual.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="LiClipseText Manual" />
