--- a/scripts/download.html
+++ b/scripts/download.html
@@ -29,22 +29,17 @@
                 <a href="%(win64_url)s">LiClipse %(liclipse_version)s Windows (64 bits)</a>
             </li>
             <li>
-                <a href="%(win32_url)s">LiClipse %(liclipse_version)s Windows (32 bits)</a>
-            </li>
-            <li>
                 <a href="%(macos_url)s">LiClipse %(liclipse_version)s Mac OS (64 bits)</a>
             </li>
             <li>
                 <a href="%(linux64_url)s">LiClipse %(liclipse_version)s Linux (64 bits)</a>
             </li>
             <li>
-                <a href="%(linux32_url)s">LiClipse %(liclipse_version)s Linux (32 bits)</a>
-            </li>
-            <li>
                 <a href="%(update_site_url)s">LiClipse %(liclipse_version)s Local Update Site</a>
             </li>
         </ul>
-        Note that 32 bit versions should only be used if you're really in a 32 bit machine.
+        Note that 32 bit versions are no longer available (so, if you need to work on a 32 bit machine,
+        please use an older version of LiClipse).
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
