--- a/download.html
+++ b/download.html
@@ -80,29 +80,24 @@
         <br/>
         <ul>
             <li>
-                <a href="https://www.mediafire.com/file/rpz8mkp3qu9k5fy/liclipse_5.1.3_win32.x86_64.exe">LiClipse 5.1.3 Windows (64 bits)</a>
+                <a href="https://www.mediafire.com/file/h5ge7zmwn4yzm46/liclipse_5.2.2_win32.x86_64.exe">LiClipse 5.2.2 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/3i2ir72cezc3373/liclipse_5.1.3_win32.x86.exe">LiClipse 5.1.3 Windows (32 bits)</a>
+                <a href="https://www.mediafire.com/file/nfynbnaeb3q9wv4/liclipse_5.2.2_macosx.cocoa.x86_64.dmg">LiClipse 5.2.2 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/32gtr23s399ec2x/liclipse_5.1.3_macosx.cocoa.x86_64.dmg">LiClipse 5.1.3 Mac OS (64 bits)</a>
+                <a href="https://www.mediafire.com/file/i18tp521ij823z5/liclipse_5.2.2_linux.gtk.x86_64.tar.gz">LiClipse 5.2.2 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/93v856k44doeau1/liclipse_5.1.3_linux.gtk.x86_64.tar.gz">LiClipse 5.1.3 Linux (64 bits)</a>
-            </li>
-            <li>
-                <a href="https://www.mediafire.com/file/9laoeq7nf9xlczz/liclipse_5.1.3_linux.gtk.x86.tar.gz">LiClipse 5.1.3 Linux (32 bits)</a>
-            </li>
-            <li>
-                <a href="https://www.mediafire.com/file/c091bf0uqq1j75a/UPDATE_SITE_5.1.3.zip">LiClipse 5.1.3 Local Update Site</a>
+                <a href="https://www.mediafire.com/file/oa4dkpdd6td8ror/UPDATE_SITE_5.2.2.zip">LiClipse 5.2.2 Local Update Site</a>
             </li>
         </ul>
-        Note that 32 bit versions should only be used if you're really in a 32 bit machine.
+        Note that 32 bit versions are no longer available (so, if you need to work on a 32 bit machine,
+        please use an older version of LiClipse).
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="https://www.mediafire.com/file/dbad1q51xdadc6c/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 5.1.3 files SHA256</a>.
+        <a href="https://www.mediafire.com/file/u1m1b3g9mo585m6/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 5.2.2 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -136,7 +131,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="http://www.mediafire.com/folder/pgljpf8sg8uwc/LiClipse_5.1.3">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/2pbuc2zdhyimz/LiClipse_5.2.2">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -150,7 +145,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="http://www.mediafire.com/folder/pgljpf8sg8uwc/LiClipse_5.1.3">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/2pbuc2zdhyimz/LiClipse_5.2.2">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -196,7 +191,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="http://www.mediafire.com/folder/pgljpf8sg8uwc/LiClipse_5.1.3">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/2pbuc2zdhyimz/LiClipse_5.2.2">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -233,7 +228,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="http://www.mediafire.com/folder/pgljpf8sg8uwc/LiClipse_5.1.3">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/2pbuc2zdhyimz/LiClipse_5.2.2">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
