--- a/history.html
+++ b/history.html
@@ -67,9 +67,20 @@
             <section>
                 
     <h3>Releases history</h3>
-        <h3>Release Highlights for LiClipse 5.1.2</h3>
+        <h3>Release Highlights for LiClipse 5.2.2</h3>
         <ul>
-        	<li>Updated PyDev to 7.0.2.</li>
+        	<li>Updated PyDev to 7.2.0.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Fixed issue where pipenv executable search was being executed over and over when it was not found.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.11 (2019-03).</li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 5.1.3</h3>
+        <ul>
+        	<li>Updated PyDev to 7.0.3.</li>
         	<ul>
         	    <li>Debugger performance improvements (on Python 3.6 onwards).</li>
         	    <li>Mypy can be used for doing code analysis.</li>
@@ -79,7 +90,6 @@
         	</ul>
         	<li>Updated EGit.</li>
         </ul>
-
         <h3>Release Highlights for LiClipse 5.0.3</h3>
         <ul>
         	<li>Updated PyDev to 6.5.0.</li>
