--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.2.2</h3>
+        <ul>
+        	<li>Updated PyDev to 7.2.0.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Fixed issue where pipenv executable search was being executed over and over when it was not found.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.11 (2019-03).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.1.3</h3>
         <ul>
         	<li>Updated PyDev to 7.0.3.</li>
@@ -99,27 +110,6 @@
         	    <li>It's possible to manage virtual environments from the editor (Ctrl+2, pip/conda/pipenv).</li>
         	</ul>
         	<li>Updated EGit.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.0.3</h3>
-        <ul>
-        	<li>Updated PyDev to 6.5.0.</li>
-        	<ul>
-        	    <li>Debugger improvements.</li>
-        	    <li>#region/#endregion code folding.</li>
-        	    <li>Ctrl+Alt+Shift+I to change default interpreter.</li>
-        	    <li>Scroll lock for interactive interpreter.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.0.2</h3>
-        <ul>
-        	<li>Updated PyDev to 6.4.4.</li>
-        	<ul>
-        	    <li>Fixes in debugger.</li>
-        	    <li>Fixes parsing f-strings.</li>
-        	</ul>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
