--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,15 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.2.4</h3>
+        <ul>
+        	<li>Updated PyDev to 7.2.1.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Performance improvements in console hyperlinking.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.2.2</h3>
         <ul>
         	<li>Updated PyDev to 7.2.0.</li>
