--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2018 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
+<p><small>Copyright 2013-2019 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -86,6 +86,15 @@
                 <br/>
                 <p><img src="images/theming.png"></p>
             </li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 5.2.4</h3>
+        <ul>
+        	<li>Updated PyDev to 7.2.1.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Performance improvements in console hyperlinking.</li>
+        	</ul>
         </ul>
 
         <h3>Release Highlights for LiClipse 5.2.2</h3>
