--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,16 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 5.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.3.0.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Use black with executable (and not in default interpreter).</li>
+        		<li>Code completion with non-english locale.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.2.4</h3>
         <ul>
         	<li>Updated PyDev to 7.2.1.</li>
