--- a/download.html
+++ b/download.html
@@ -80,16 +80,16 @@
         <br/>
         <ul>
             <li>
-                <a href="https://www.mediafire.com/file/9ke8qqeerz67ioy/liclipse_5.3.0_win32.x86_64.exe">LiClipse 5.3.0 Windows (64 bits)</a>
+                <a href="http://www.mediafire.com/file/23dcorlwlnjeljp/liclipse_6.0.0_win32.x86_64.exe">LiClipse 6.0.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/c0dcsho551y0brr/liclipse_5.3.0_macosx.cocoa.x86_64.dmg">LiClipse 5.3.0 Mac OS (64 bits)</a>
+                <a href="http://www.mediafire.com/file/ve32xytlixmlg3x/liclipse_6.0.0_macosx.cocoa.x86_64.dmg">LiClipse 6.0.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/w6tq0vuzynd2b06/liclipse_5.3.0_linux.gtk.x86_64.tar.gz">LiClipse 5.3.0 Linux (64 bits)</a>
+                <a href="http://www.mediafire.com/file/ujf4h8r99qcm7d4/liclipse_6.0.0_linux.gtk.x86_64.tar.gz">LiClipse 6.0.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/qgc4cytbruhp67s/UPDATE_SITE_5.3.0.zip">LiClipse 5.3.0 Local Update Site</a>
+                <a href="http://www.mediafire.com/file/nl7ptt9lhchva10/UPDATE_SITE_6.0.0.zip">LiClipse 6.0.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions are no longer available (so, if you need to work on a 32 bit machine,
@@ -97,7 +97,7 @@
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="https://www.mediafire.com/file/b60mm8o8quc7trr/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 5.3.0 files SHA256</a>.
+        <a href="http://www.mediafire.com/file/610a6z3n24oe8hd/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 6.0.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -131,7 +131,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="http://www.mediafire.com/folder/3aqmbz07ghp1s/LiClipse_5.3.0">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="http://www.mediafire.com/folder/qt80cbvc7s5jj/LiClipse_6.0.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -145,7 +145,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="http://www.mediafire.com/folder/3aqmbz07ghp1s/LiClipse_5.3.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="http://www.mediafire.com/folder/qt80cbvc7s5jj/LiClipse_6.0.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -191,7 +191,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="http://www.mediafire.com/folder/3aqmbz07ghp1s/LiClipse_5.3.0">MediaFire</a>.
+        Download the .tar.gz from <a href="http://www.mediafire.com/folder/qt80cbvc7s5jj/LiClipse_6.0.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -228,7 +228,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="http://www.mediafire.com/folder/3aqmbz07ghp1s/LiClipse_5.3.0">MediaFire</a>,
+        <a href="http://www.mediafire.com/folder/qt80cbvc7s5jj/LiClipse_6.0.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
