--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 6.0.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.4.0.</li>
+        	<ul>
+        		<li>Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.13 (2019-09).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.3.0</h3>
         <ul>
         	<li>Updated PyDev to 7.3.0.</li>
@@ -105,30 +116,6 @@
         		<li>Debugger improvements.</li>
         		<li>Performance improvements in console hyperlinking.</li>
         	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.2.2</h3>
-        <ul>
-        	<li>Updated PyDev to 7.2.0.</li>
-        	<ul>
-        		<li>Debugger improvements.</li>
-        		<li>Fixed issue where pipenv executable search was being executed over and over when it was not found.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        	<li>Updated Base Eclipse to 4.11 (2019-03).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.1.3</h3>
-        <ul>
-        	<li>Updated PyDev to 7.0.3.</li>
-        	<ul>
-        	    <li>Debugger performance improvements (on Python 3.6 onwards).</li>
-        	    <li>Mypy can be used for doing code analysis.</li>
-        	    <li>Black can be used as the code formatting engine.</li>
-        	    <li>It's now possible to use pipenv for managing virtual environments.</li>
-        	    <li>It's possible to manage virtual environments from the editor (Ctrl+2, pip/conda/pipenv).</li>
-        	</ul>
-        	<li>Updated EGit.</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
