--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,36 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 6.0.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.4.0.</li>
+        	<ul>
+        		<li>Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.13 (2019-09).</li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 5.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.3.0.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Use black with executable (and not in default interpreter).</li>
+        		<li>Code completion with non-english locale.</li>
+        	</ul>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 5.2.4</h3>
+        <ul>
+        	<li>Updated PyDev to 7.2.1.</li>
+        	<ul>
+        		<li>Debugger improvements.</li>
+        		<li>Performance improvements in console hyperlinking.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 5.2.2</h3>
         <ul>
         	<li>Updated PyDev to 7.2.0.</li>
