Homepage update after release 6.1.0

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2019 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
+<p><small>Copyright 2013-2020 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -86,6 +86,17 @@
                 <br/>
                 <p><img src="images/theming.png"></p>
             </li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 6.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.5.0.</li>
+        	<ul>
+        		<li>Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.14 (2019-12).</li>
         </ul>
 
         <h3>Release Highlights for LiClipse 6.0.0</h3>
