--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 6.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.5.0.</li>
+        	<ul>
+        		<li>Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.14 (2019-12).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.0.0</h3>
         <ul>
         	<li>Updated PyDev to 7.4.0.</li>
