--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 6.2.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.6.0.</li>
+        	<ul>
+        		<li>Fixes in parsing Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        		<li>PyTest integration fixes.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.15 (2020-03).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.1.0</h3>
         <ul>
         	<li>Updated PyDev to 7.5.0.</li>
@@ -108,25 +120,6 @@
         	</ul>
         	<li>Updated EGit.</li>
         	<li>Updated Base Eclipse to 4.13 (2019-09).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.3.0</h3>
-        <ul>
-        	<li>Updated PyDev to 7.3.0.</li>
-        	<ul>
-        		<li>Debugger improvements.</li>
-        		<li>Use black with executable (and not in default interpreter).</li>
-        		<li>Code completion with non-english locale.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 5.2.4</h3>
-        <ul>
-        	<li>Updated PyDev to 7.2.1.</li>
-        	<ul>
-        		<li>Debugger improvements.</li>
-        		<li>Performance improvements in console hyperlinking.</li>
-        	</ul>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
