--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,29 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 6.2.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.6.0.</li>
+        	<ul>
+        		<li>Fixes in parsing Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        		<li>PyTest integration fixes.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.15 (2020-03).</li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 6.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.5.0.</li>
+        	<ul>
+        		<li>Support for Python 3.8</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated Base Eclipse to 4.14 (2019-12).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.0.0</h3>
         <ul>
         	<li>Updated PyDev to 7.4.0.</li>
