--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 6.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.7.0.</li>
+        	<ul>
+        		<li>Improvements dealing with typing information</li>
+        		<li>Improvements in Mypy integration.</li>
+        		<li>Improvements in PyLint integration.</li>
+        		<li>Fixes for dealing with latest pytest.</li>
+        		<li>Fixes for dealing with latest cython.</li>
+        		<li>Support for namespace packages.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Bundled java updated to OpenJDK 14.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.2.0</h3>
         <ul>
         	<li>Updated PyDev to 7.6.0.</li>
@@ -98,28 +113,6 @@
         	</ul>
         	<li>Updated EGit.</li>
         	<li>Updated Base Eclipse to 4.15 (2020-03).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 6.1.0</h3>
-        <ul>
-        	<li>Updated PyDev to 7.5.0.</li>
-        	<ul>
-        		<li>Support for Python 3.8</li>
-        		<li>Debugger improvements.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        	<li>Updated Base Eclipse to 4.14 (2019-12).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 6.0.0</h3>
-        <ul>
-        	<li>Updated PyDev to 7.4.0.</li>
-        	<ul>
-        		<li>Support for Python 3.8</li>
-        		<li>Debugger improvements.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        	<li>Updated Base Eclipse to 4.13 (2019-09).</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
