--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,21 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 6.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 7.7.0.</li>
+        	<ul>
+        		<li>Improvements dealing with typing information</li>
+        		<li>Improvements in Mypy integration.</li>
+        		<li>Improvements in PyLint integration.</li>
+        		<li>Fixes for dealing with latest pytest.</li>
+        		<li>Fixes for dealing with latest cython.</li>
+        		<li>Support for namespace packages.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        	<li>Bundled java updated to OpenJDK 14.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.2.0</h3>
         <ul>
         	<li>Updated PyDev to 7.6.0.</li>
