Updated LiClipse to 7.0.0

--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 7.0.0</h3>
+        <ul>
+        	<li>Updated PyDev to 8.0.0.</li>
+        	<ul>
+        		<li>Improvements in Mypy integration.</li>
+        		<li>Debugger improvements (especially in the frame evaluation mode).</li>
+        		<li>Improvements to type inference from type annotations.</li>
+        		<li>Test running fixes with nose and binary output.</li>
+        		<li>Code completion inside f-strings.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 6.3.0</h3>
         <ul>
         	<li>Updated PyDev to 7.7.0.</li>
@@ -101,18 +113,6 @@
         	</ul>
         	<li>Updated EGit.</li>
         	<li>Bundled java updated to OpenJDK 14.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 6.2.0</h3>
-        <ul>
-        	<li>Updated PyDev to 7.6.0.</li>
-        	<ul>
-        		<li>Fixes in parsing Support for Python 3.8</li>
-        		<li>Debugger improvements.</li>
-        		<li>PyTest integration fixes.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        	<li>Updated Base Eclipse to 4.15 (2020-03).</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
