--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,19 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 7.0.0</h3>
+        <ul>
+        	<li>Updated PyDev to 8.0.0.</li>
+        	<ul>
+        		<li>Improvements in Mypy integration.</li>
+        		<li>Debugger improvements (especially in the frame evaluation mode).</li>
+        		<li>Improvements to type inference from type annotations.</li>
+        		<li>Test running fixes with nose and binary output.</li>
+        		<li>Code completion inside f-strings.</li>
+        	</ul>
+        </ul>
+
+
         <h3>Release Highlights for LiClipse 6.3.0</h3>
         <ul>
         	<li>Updated PyDev to 7.7.0.</li>
