Update to LiClipse 7.0.1

--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,17 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 7.0.1</h3>
+        <ul>
+        	<li>Updated PyDev to 8.0.0.</li>
+        	<ul>
+        		<li>Support for Python 3.9.</li>
+        		<li>Quick fix to convert string to f-string.</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 7.0.0</h3>
         <ul>
         	<li>Updated PyDev to 8.0.0.</li>
