--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 7.0.1</h3>
+        <ul>
+        	<li>Updated PyDev to 8.0.0.</li>
+        	<ul>
+        		<li>Support for Python 3.9.</li>
+        		<li>Quick fix to convert string to f-string.</li>
+        		<li>Debugger improvements.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 7.0.0</h3>
         <ul>
         	<li>Updated PyDev to 8.0.0.</li>
@@ -44,21 +55,6 @@
         		<li>Test running fixes with nose and binary output.</li>
         		<li>Code completion inside f-strings.</li>
         	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 6.3.0</h3>
-        <ul>
-        	<li>Updated PyDev to 7.7.0.</li>
-        	<ul>
-        		<li>Improvements dealing with typing information</li>
-        		<li>Improvements in Mypy integration.</li>
-        		<li>Improvements in PyLint integration.</li>
-        		<li>Fixes for dealing with latest pytest.</li>
-        		<li>Fixes for dealing with latest cython.</li>
-        		<li>Support for namespace packages.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        	<li>Bundled java updated to OpenJDK 14.</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
