--- a/download.html
+++ b/download.html
@@ -80,16 +80,16 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/glm0x139vbbcse7/liclipse_7.0.1_win32.x86_64.exe">LiClipse 7.0.1 Windows (64 bits)</a>
+                <a href="https://www.mediafire.com/file/glm0x139vbbcse7/liclipse_7.0.1_win32.x86_64.exe">LiClipse 7.0.1 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/d8v8ubpz8fkfy78/liclipse_7.0.1_macosx.cocoa.x86_64.dmg">LiClipse 7.0.1 Mac OS (64 bits)</a>
+                <a href="https://www.mediafire.com/file/d8v8ubpz8fkfy78/liclipse_7.0.1_macosx.cocoa.x86_64.dmg">LiClipse 7.0.1 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/dusbchd50ch2bd4/liclipse_7.0.1_linux.gtk.x86_64.tar.gz">LiClipse 7.0.1 Linux (64 bits)</a>
+                <a href="https://www.mediafire.com/file/dusbchd50ch2bd4/liclipse_7.0.1_linux.gtk.x86_64.tar.gz">LiClipse 7.0.1 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/x22w3vhperb4rbu/UPDATE_SITE_7.0.1.zip">LiClipse 7.0.1 Local Update Site</a>
+                <a href="https://www.mediafire.com/file/x22w3vhperb4rbu/UPDATE_SITE_7.0.1.zip">LiClipse 7.0.1 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit standalone versions are no longer available (so, if you need to work on a 32 bit machine,
@@ -97,7 +97,7 @@
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/jiqlkvq9sxiebep/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 7.0.1 files SHA256</a>.
+        <a href="https://www.mediafire.com/file/jiqlkvq9sxiebep/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 7.0.1 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -123,13 +123,13 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="http://www.mediafire.com/file/glm0x139vbbcse7/liclipse_7.0.1_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/file/glm0x139vbbcse7/liclipse_7.0.1_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="http://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -170,7 +170,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="http://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>.
         <br/>
         <br/>
 
@@ -204,7 +204,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="http://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/xgwnm3qxxsjxd/LiClipse_7.0.1">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
