Update LiClipseText homepage to 2.2.0

--- a/scripts/text/index.html
+++ b/scripts/text/index.html
@@ -43,6 +43,16 @@
         </p>
         <h1>Releases information</h1>
 
+    	<h3>Release 2.2.0 (2020-12-06)</h3>
+    	<ul>
+    		<li>Updated TextMate grammar parsing.</li>
+    		<li>Java 11 is now required.</li>
+    		<li>Support for TextScript.</li>
+    		<li>Support for RobotFramework.</li>
+    		<li>Support for JSON.</li>
+    	</ul>
+        <br>
+
     	<h3>Release 2.1.3 (2018-05-05)</h3>
     	<ul>
     		<li>When loading xml files, don't load external entities (security issue).</li>
