--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,31 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 7.1.0</h3>
+        <ul>
+        	<li>Updated to Eclipse <strong>2020-09 (4.17)</strong>.</li>
+        	<ul>
+	        	<li><strong>Java 11 is now required.</strong></li>
+        	</ul>
+        	<li>Updated PyDev to 8.0.1.</li>
+        	<ul>
+        		<li>Interactive console improvements.</li>
+        		<li>Debugger improvements.</li>
+        		<li>Support for <b>from __future__ import anotations</b>.</li>
+        	</ul>
+        	<li>Updated LiClipseText to 2.2.0.</li>
+        	<ul>
+        		<li>Support for TypeScript</li>
+        		<li>Support for JSON</li>
+        		<li>Support for RobotFramework</li>
+        	</ul>
+        	<li>Improvements to the LiClipse Dark theme</li>
+        	<ul>
+        		<li>Theming is now applied to the whole IDE (including preferences) by default.</li>
+        		<li>Tree scroolbars on Windows are themed on dark themes.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 7.0.1</h3>
         <ul>
         	<li>Updated PyDev to 8.0.0.</li>
@@ -43,18 +68,6 @@
         		<li>Debugger improvements.</li>
         	</ul>
         	<li>Updated EGit.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 7.0.0</h3>
-        <ul>
-        	<li>Updated PyDev to 8.0.0.</li>
-        	<ul>
-        		<li>Improvements in Mypy integration.</li>
-        		<li>Debugger improvements (especially in the frame evaluation mode).</li>
-        		<li>Improvements to type inference from type annotations.</li>
-        		<li>Test running fixes with nose and binary output.</li>
-        		<li>Code completion inside f-strings.</li>
-        	</ul>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
