--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -26,30 +26,33 @@
             <li>C/C++</li>
             <li>CSS</li>
             <li>CoffeScript</li>
-            <li>CMake <strong>(new on 3.2.0)</strong></li>
+            <li>CMake</li>
             <li>Dart</li>
             <li>Django Templates</li>
-            <li>Go <strong>(new on 2.0)</strong></li>
+            <li>Go</li>
             <li>HTML</li>
             <li>Java</li>
             <li>JavaScript</li>
-            <li>Jinja2 <strong>(new on 2.0)</strong></li>
+            <li>Jinja2</li>
             <li>Julia</li>
+            <li>JSON</li>
             <li>Kivy Language</li>
-            <li>Linux Shell files <strong>(new on 2.2.0)</strong></li>
+            <li>Linux Shell files</li>
             <li>Mako Templates</li>
-            <li>Markdown <strong>(new on 2.1.0)</strong></li>
-            <li>Nim <strong>(new on 2.0)</strong></li>
-            <li>PERL <strong>(new on 2.2.0)</strong></li>
-            <li>PHP <strong>(new on 2.1.0)</strong></li>
+            <li>Markdown</li>
+            <li>Nim</li>
+            <li>PERL</li>
+            <li>PHP</li>
             <li>Python</li>
-            <li>RAML (new on 2.4.0)</li>
+            <li>RAML</li>
+            <li>RobotFramework</li>
             <li>RST (ReStructured Text)</li>
-            <li>Ruby <strong>(new on 2.1.0)</strong></li>
+            <li>Ruby</li>
             <li>SCSS</li>
             <li>StringTemplate</li>
-            <li>Swift <strong>(new on 2.2.0)</strong></li>
-            <li>Windows bat files <strong>(new on 2.2.0)</strong></li>
+            <li>Swift</li>
+            <li>TypeScript</li>
+            <li>Windows bat files</li>
             <li>XML</li>
             <li>YAML</li>
         </ul>
