Add support for Stripe payments.

--- a/scripts/buy.html
+++ b/scripts/buy.html
@@ -19,16 +19,7 @@
     	To buy a new license, choose one of the options below.
     	<br>
     	<br>
-		<h3>Buy Single User</h3>
-
-		<!--
-		<ul class="libutton">: shut down (need to find another option)
-        <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-1&v=0&d=0&q=1">
-        Click to buy using<strong class="libutton">SWREG</strong>
-        </a>
-        </li>
-    	</ul>
-    	-->
+		<h3>Buy Single User with PayPal</h3>
 
 		<ul class="libutton">
         <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NJW4VEJQZ36GJ">
@@ -37,16 +28,7 @@
         </li>
     	</ul>
 		<br/>
-		<h3>Buy Multi User</h3>
-
-		<!--
-		<ul class="libutton">: shut down (need to find another option)
-        <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-2&v=0&d=0&q=1">
-        Click to buy using<strong class="libutton">SWREG</strong>
-        </a>
-        </li>
-    	</ul>
-    	-->
+		<h3>Buy Multi User with PayPal</h3>
 
 		<ul class="libutton">
         <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=G5APKLQNXK7DL">
@@ -55,10 +37,20 @@
         </li>
     	</ul>
 
+		<br/>
+		<h3>Buy Single or Multi User with Stripe</h3>
+
+		<ul class="libutton">
+        <li class="libutton"><a class="libutton" href="https://www.brainwy.com/stripe_payment_liclipse/">
+        Select to buy with<strong class="libutton">Stripe</strong>
+        </a>
+        </li>
+    	</ul>
+
         <br/>
-    	Note: your license should be delivered within a day after your purchase is completed (remember
-    	to check your spam folder too). If you don't find it within that timeframe,
-    	please contact fabiofz (at) gmail (dot) com.
+    	Note: your license should be delivered to the e-mail specified during the checkout.
+    	If you don't receive your license 20 minutes after your purchase is completed (remember
+    	to check your spam folder too), please contact fabioz (at) brainwy (dot) com.
     	<br/>
     	<br/>
     </body>
