Updated to LiClipse 7.3.0

--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2020 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
+<p><small>Copyright 2013-2021 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -80,16 +80,16 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/5s0tge8t4wwkh89/liclipse_7.1.0_win32.x86_64.exe">LiClipse 7.1.0 Windows (64 bits)</a>
+                <a href="https://www.mediafire.com/file/1zwyjunnvl3na4m/liclipse_7.3.0_win32.x86_64.exe">LiClipse 7.3.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/4avujhmdvxhyu49/liclipse_7.1.0_macosx.cocoa.x86_64.dmg">LiClipse 7.1.0 Mac OS (64 bits)</a>
+                <a href="https://www.mediafire.com/file/xw7ef6ia92588mw/liclipse_7.3.0_macosx.cocoa.x86_64.dmg">LiClipse 7.3.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/ojqvxy1pgx3ubun/liclipse_7.1.0_linux.gtk.x86_64.tar.gz">LiClipse 7.1.0 Linux (64 bits)</a>
+                <a href="https://www.mediafire.com/file/ve681xsdgovki7q/liclipse_7.3.0_linux.gtk.x86_64.tar.gz">LiClipse 7.3.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/xjguzldw8b10b2t/UPDATE_SITE_7.1.0.zip">LiClipse 7.1.0 Local Update Site</a>
+                <a href="https://www.mediafire.com/file/klylbb0h9tw15re/UPDATE_SITE_7.3.0.zip">LiClipse 7.3.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit standalone versions are no longer available (so, if you need to work on a 32 bit machine,
@@ -97,7 +97,7 @@
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/qcc3u8lcelf65zs/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 7.1.0 files SHA256</a>.
+        <a href="https://www.mediafire.com/file/o28x437q6hh2ruk/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 7.3.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -123,13 +123,13 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="http://www.mediafire.com/file/5s0tge8t4wwkh89/liclipse_7.1.0_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/file/1zwyjunnvl3na4m/liclipse_7.3.0_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="http://www.mediafire.com/folder/4leu5kah4ddtr/LiClipse_7.1.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/nx2e1ogp4laom/LiClipse_7.3.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -170,7 +170,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="http://www.mediafire.com/folder/4leu5kah4ddtr/LiClipse_7.1.0">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/nx2e1ogp4laom/LiClipse_7.3.0">MediaFire</a>.
         <br/>
         <br/>
 
@@ -204,7 +204,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="http://www.mediafire.com/folder/4leu5kah4ddtr/LiClipse_7.1.0">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/nx2e1ogp4laom/LiClipse_7.3.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
