--- a/text/updates/index.html
+++ b/text/updates/index.html
@@ -2,11 +2,4 @@ LiClipseText update site aggregator.<br/>
 <br/>
 Bundles the following LiClipseText update sites:<br/>
 <br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/1.0.0">https://dl.bintray.com/fabioz/liclipsetext/1.0.0</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/1.1.0">https://dl.bintray.com/fabioz/liclipsetext/1.1.0</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.0.0">https://dl.bintray.com/fabioz/liclipsetext/2.0.0</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.0">https://dl.bintray.com/fabioz/liclipsetext/2.1.0</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.1">https://dl.bintray.com/fabioz/liclipsetext/2.1.1</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.2">https://dl.bintray.com/fabioz/liclipsetext/2.1.2</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.3">https://dl.bintray.com/fabioz/liclipsetext/2.1.3</a><br/>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.2.0">https://dl.bintray.com/fabioz/liclipsetext/2.2.0</a><br/>
+<a href="https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_3_0">https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_3_0</a><br/>
