Done LiClipseText 2.3.0 release

--- a/text/index.html
+++ b/text/index.html
@@ -268,6 +268,15 @@
         </p>
         <h1>Releases information</h1>
 
+    	<h3>Release 2.3.0 (2021-04-29)</h3>
+    	<ul>
+    		<li>Fixes to use Regexp for navigation (ctrl+shift+up/down).</li>
+    		<li>Fix issues in TypeScript integration.</li>
+    		<li>Properly added items to outline for TypeScript</li>
+    		<li>Outline for JSON.</li>
+    	</ul>
+        <br>
+        
     	<h3>Release 2.2.0 (2020-12-06)</h3>
     	<ul>
     		<li>Updated TextMate grammar parsing.</li>
@@ -388,7 +397,7 @@
 	<tr align="center" bgcolor="#eeeeee" valign="middle">
 		<td colspan="10" nowrap="nowrap" class="td_bottom">
 		<center>
-		<p class="header_text">Copyright: Brainwy Software Ltda, 2020</p>
+		<p class="header_text">Copyright: Brainwy Software Ltda, 2020-2021</p>
 		</center>
 		</td>
 	</tr>
