--- a/scripts/text/index.html
+++ b/scripts/text/index.html
@@ -43,6 +43,15 @@
         </p>
         <h1>Releases information</h1>
 
+    	<h3>Release 2.3.0 (2021-04-29)</h3>
+    	<ul>
+    		<li>Fixes to use Regexp for navigation (ctrl+shift+up/down).</li>
+    		<li>Fix issues in TypeScript integration.</li>
+    		<li>Properly added items to outline for TypeScript</li>
+    		<li>Outline for JSON.</li>
+    	</ul>
+        <br>
+        
     	<h3>Release 2.2.0 (2020-12-06)</h3>
     	<ul>
     		<li>Updated TextMate grammar parsing.</li>
