--- a/text/developers.html
+++ b/text/developers.html
@@ -343,7 +343,7 @@
 	<tr align="center" bgcolor="#eeeeee" valign="middle">
 		<td colspan="10" nowrap="nowrap" class="td_bottom">
 		<center>
-		<p class="header_text">Copyright: Brainwy Software Ltda, 2020</p>
+		<p class="header_text">Copyright: Brainwy Software Ltda, 2020-2021</p>
 		</center>
 		</td>
 	</tr>
