--- a/text/scope_definition.html
+++ b/text/scope_definition.html
@@ -911,7 +911,7 @@ scope_definition_rules:
 	<tr align="center" bgcolor="#eeeeee" valign="middle">
 		<td colspan="10" nowrap="nowrap" class="td_bottom">
 		<center>
-		<p class="header_text">Copyright: Brainwy Software Ltda, 2020</p>
+		<p class="header_text">Copyright: Brainwy Software Ltda, 2020-2021</p>
 		</center>
 		</td>
 	</tr>
